--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.7/paper/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Cormorant+SC" rel="stylesheet">
-  <link rel="stylesheet" href="../../assets/css/style.css">
 </head>
 
 <body>
@@ -17,9 +16,9 @@
       <a class="navbar-brand" href="/">Mongo Scraper</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="/">Home</a></li>
-      <li><a href="/saved">Saved Articles</a></li>
-      <li><a class="btn btn-danger scrape-new">SCRAPE NEW ARTICLES!</a></li>
+      <li class="active" id="home" ><a href="/">Home</a></li>
+      <li><a href="/saved" id="save" >Saved Articles</a></li>
+      <li><a href="/scrape" class="btn btn-danger scrape-new">SCRAPE NEW ARTICLES!</a></li>
     </ul>
   </div>
 </nav>
@@ -34,6 +33,8 @@
   </div>
 </div>
 <div class="container-fluid article-container">
+  <div id="articles"></div>
+  <div id="notes" ></div>
 </div>
 
 <footer class="footer">
@@ -45,7 +46,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/4.4.0/bootbox.min.js"></script>
-<!-- <script src="../../assets/javascript/index.js"></script> -->
+<script src="app.js"></script> -->
 
 </body>
 
